--- a/App.xaml
+++ b/App.xaml
@@ -13,6 +13,7 @@
 
             <converters:ColorToHexConverter x:Key="ColorToHexConverter"/>
             <converters:IsNotNullConverter x:Key="IsNotNullConverter"/>
+            <converters:IsNullConverter x:Key="IsNullConverter"/>
             <converters:InverseBoolConverter x:Key="InverseBoolConverter"/>
         </ResourceDictionary>
     </Application.Resources>
