--- a/Components/SettingsFlyoutPanel.xaml
+++ b/Components/SettingsFlyoutPanel.xaml
@@ -3,10 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:Maui.ColorPicker;assembly=Maui.ColorPicker"
              x:Class="LunaDraw.Components.SettingsFlyoutPanel">
-  <Border Background="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Gray800}}"
+  <Border Background="{AppThemeBinding Light={StaticResource PopupBackgroundLight}, Dark={StaticResource PopupBackgroundDark}}"
           Padding="15"
           StrokeShape="RoundRectangle"
-          Stroke="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}"
+          Stroke="{AppThemeBinding Light={StaticResource PopupBorderLight}, Dark={StaticResource PopupBorderDark}}"
           StrokeThickness="1"
           MaximumHeightRequest="600">
     <ScrollView VerticalScrollBarVisibility="Default"
@@ -17,7 +17,7 @@
                HorizontalTextAlignment="Center"/>
 
         <BoxView HeightRequest="1"
-                 Color="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}"
+                 Color="{AppThemeBinding Light={StaticResource PopupBorderLight}, Dark={StaticResource PopupBorderDark}}"
                  Margin="0,5"/>
 
         <Label Text="Brush Color"
@@ -153,7 +153,7 @@
                      Spacing="10"
                      HorizontalOptions="Center">
           <!-- Preset Colors -->
-          <Border Stroke="Gray"
+          <Border Stroke="{StaticResource Gray500Brush}"
                   StrokeShape="RoundRectangle 15"
                   StrokeThickness="1"
                   HeightRequest="30"
@@ -167,7 +167,7 @@
               </BoxView.GestureRecognizers>
             </BoxView>
           </Border>
-          <Border Stroke="Gray"
+          <Border Stroke="{StaticResource Gray500Brush}"
                   StrokeShape="RoundRectangle 15"
                   StrokeThickness="1"
                   HeightRequest="30"
@@ -181,7 +181,7 @@
               </BoxView.GestureRecognizers>
             </BoxView>
           </Border>
-          <Border Stroke="Gray"
+          <Border Stroke="{StaticResource Gray500Brush}"
                   StrokeShape="RoundRectangle 15"
                   StrokeThickness="1"
                   HeightRequest="30"
@@ -195,7 +195,7 @@
               </BoxView.GestureRecognizers>
             </BoxView>
           </Border>
-          <Border Stroke="Gray"
+          <Border Stroke="{StaticResource Gray500Brush}"
                   StrokeShape="RoundRectangle 15"
                   StrokeThickness="1"
                   HeightRequest="30"
@@ -209,7 +209,7 @@
               </BoxView.GestureRecognizers>
             </BoxView>
           </Border>
-          <Border Stroke="Gray"
+          <Border Stroke="{StaticResource Gray500Brush}"
                   StrokeShape="RoundRectangle 15"
                   StrokeThickness="1"
                   HeightRequest="30"
