--- a/Components/ShapesFlyoutPanel.xaml
+++ b/Components/ShapesFlyoutPanel.xaml
@@ -5,10 +5,10 @@
              xmlns:viewModels="clr-namespace:LunaDraw.Logic.ViewModels"
              x:Class="LunaDraw.Components.ShapesFlyoutPanel"
              x:DataType="viewModels:ToolbarViewModel">
-  <Border Background="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Gray800}}"
+  <Border Background="{AppThemeBinding Light={StaticResource PopupBackgroundLight}, Dark={StaticResource PopupBackgroundDark}}"
           Padding="12"
           StrokeShape="RoundRectangle"
-          Stroke="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}"
+          Stroke="{AppThemeBinding Light={StaticResource PopupBorderLight}, Dark={StaticResource PopupBorderDark}}"
           StrokeThickness="1">
     <StackLayout Spacing="10">
       <Label Text="Choose a Shape"
@@ -17,7 +17,7 @@
              HorizontalTextAlignment="Center"/>
 
       <BoxView HeightRequest="1"
-               Color="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}"
+               Color="{AppThemeBinding Light={StaticResource PopupBorderLight}, Dark={StaticResource PopupBorderDark}}"
                Margin="0,5"/>
       <StackLayout Orientation="Horizontal"
                    HorizontalOptions="Center"
@@ -27,7 +27,7 @@
           <Border WidthRequest="80"
                   HeightRequest="80"
                   StrokeShape="RoundRectangle 12"
-                  Stroke="Gray"
+                  Stroke="{StaticResource Gray500Brush}"
                   StrokeThickness="1"
                   Padding="8">
             <Border.GestureRecognizers>
@@ -50,7 +50,7 @@
           <Border WidthRequest="80"
                   HeightRequest="80"
                   StrokeShape="RoundRectangle 12"
-                  Stroke="Gray"
+                  Stroke="{StaticResource Gray500Brush}"
                   StrokeThickness="1"
                   Padding="8">
             <Border.GestureRecognizers>
@@ -73,7 +73,7 @@
           <Border WidthRequest="80"
                   HeightRequest="80"
                   StrokeShape="RoundRectangle 12"
-                  Stroke="Gray"
+                  Stroke="{StaticResource Gray500Brush}"
                   StrokeThickness="1"
                   Padding="8">
             <Border.GestureRecognizers>
