--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -31,6 +31,27 @@
   <Color x:Key="Gray900">#212121</Color>
   <Color x:Key="Gray950">#141414</Color>
 
+  <!-- Semantic Colors -->
+  <Color x:Key="PopupBackgroundLight">#FFFFFF</Color>
+  <Color x:Key="PopupBackgroundDark">#1E1E1E</Color>
+  <Color x:Key="PopupBorderLight">#E0E0E0</Color>
+  <Color x:Key="PopupBorderDark">#404040</Color>
+
+  <Color x:Key="ThumbnailBackgroundLight">#F5F5F5</Color>
+  <Color x:Key="ThumbnailBackgroundDark">#2D2D2D</Color>
+  <Color x:Key="ThumbnailBorderLight">#D0D0D0</Color>
+  <Color x:Key="ThumbnailBorderDark">#404040</Color>
+
+  <Color x:Key="ShadowLight">#40000000</Color>
+  <Color x:Key="ShadowDark">#60000000</Color>
+
+  <Color x:Key="PlaceholderTextLight">#CCCCCC</Color>
+  <Color x:Key="PlaceholderTextDark">#555555</Color>
+
+  <Color x:Key="ButtonPrimaryDark">#7D5BCE</Color>
+  <Color x:Key="ButtonSecondaryLight">#F0F0F0</Color>
+  <Color x:Key="ButtonSecondaryDark">#3A3A3A</Color>
+
   <SolidColorBrush x:Key="PrimaryBrush"
       Color="{StaticResource Primary}"/>
   <SolidColorBrush x:Key="SecondaryBrush"
