--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -31,35 +31,56 @@
   <Color x:Key="Gray900">#212121</Color>
   <Color x:Key="Gray950">#141414</Color>
 
+  <!-- Semantic Colors -->
+  <Color x:Key="PopupBackgroundLight">#FFFFFF</Color>
+  <Color x:Key="PopupBackgroundDark">#1E1E1E</Color>
+  <Color x:Key="PopupBorderLight">#E0E0E0</Color>
+  <Color x:Key="PopupBorderDark">#404040</Color>
+
+  <Color x:Key="ThumbnailBackgroundLight">#F5F5F5</Color>
+  <Color x:Key="ThumbnailBackgroundDark">#2D2D2D</Color>
+  <Color x:Key="ThumbnailBorderLight">#D0D0D0</Color>
+  <Color x:Key="ThumbnailBorderDark">#404040</Color>
+
+  <Color x:Key="ShadowLight">#40000000</Color>
+  <Color x:Key="ShadowDark">#60000000</Color>
+
+  <Color x:Key="PlaceholderTextLight">#CCCCCC</Color>
+  <Color x:Key="PlaceholderTextDark">#555555</Color>
+
+  <Color x:Key="ButtonPrimaryDark">#7D5BCE</Color>
+  <Color x:Key="ButtonSecondaryLight">#F0F0F0</Color>
+  <Color x:Key="ButtonSecondaryDark">#3A3A3A</Color>
+
   <SolidColorBrush x:Key="PrimaryBrush"
-      Color="{StaticResource Primary}"/>
+                   Color="{StaticResource Primary}"/>
   <SolidColorBrush x:Key="SecondaryBrush"
-      Color="{StaticResource Secondary}"/>
+                   Color="{StaticResource Secondary}"/>
   <SolidColorBrush x:Key="TertiaryBrush"
-      Color="{StaticResource Tertiary}"/>
+                   Color="{StaticResource Tertiary}"/>
   <SolidColorBrush x:Key="WhiteBrush"
-      Color="{StaticResource White}"/>
+                   Color="{StaticResource White}"/>
   <SolidColorBrush x:Key="BlackBrush"
-      Color="{StaticResource Black}"/>
+                   Color="{StaticResource Black}"/>
 
   <SolidColorBrush x:Key="Gray100Brush"
-      Color="{StaticResource Gray100}"/>
+                   Color="{StaticResource Gray100}"/>
   <SolidColorBrush x:Key="Gray200Brush"
-      Color="{StaticResource Gray200}"/>
+                   Color="{StaticResource Gray200}"/>
   <SolidColorBrush x:Key="Gray300Brush"
-      Color="{StaticResource Gray300}"/>
+                   Color="{StaticResource Gray300}"/>
   <SolidColorBrush x:Key="Gray400Brush"
-      Color="{StaticResource Gray400}"/>
+                   Color="{StaticResource Gray400}"/>
   <SolidColorBrush x:Key="Gray500Brush"
-      Color="{StaticResource Gray500}"/>
+                   Color="{StaticResource Gray500}"/>
   <SolidColorBrush x:Key="Gray600Brush"
-      Color="{StaticResource Gray600}"/>
+                   Color="{StaticResource Gray600}"/>
   <SolidColorBrush x:Key="Gray700Brush"
-      Color="{StaticResource Gray700}"/>
+                   Color="{StaticResource Gray700}"/>
   <SolidColorBrush x:Key="Gray800Brush"
-      Color="{StaticResource Gray800}"/>
+                   Color="{StaticResource Gray800}"/>
   <SolidColorBrush x:Key="Gray900Brush"
-      Color="{StaticResource Gray900}"/>
+                   Color="{StaticResource Gray900}"/>
   <SolidColorBrush x:Key="Gray950Brush"
-      Color="{StaticResource Gray950}"/>
+                   Color="{StaticResource Gray950}"/>
 </ResourceDictionary>
